--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,16 @@
 nodeLinker: pnp
 
 yarnPath: .yarn/releases/yarn-3.6.0.cjs
+
+checksumBehavior: 'update'
+
+supportedArchitectures:
+    cpu:
+        - x64
+        - arm64
+    libc:
+        - glibc
+        - musl
+    os:
+        - darwin
+        - linux
