--- a/.github/workflows/templates-ci.yml
+++ b/.github/workflows/templates-ci.yml
@@ -36,13 +36,11 @@ jobs:
 
         steps:
             - uses: actions/checkout@v3
-              with:
-                  fetch-depth: '2'
-
             - name: Use Node.js ${{ matrix.node-version }}
               uses: actions/setup-node@v3
               with:
                   node-version: ${{ matrix.node-version }}
+                  cache: 'yarn'
 
             - name: Install Dependencies
               run: yarn install --immutable --immutable-cache
