--- a/.github/workflows/templates-ci.yml
+++ b/.github/workflows/templates-ci.yml
@@ -32,15 +32,15 @@ jobs:
                 working-directory: services/user
         strategy:
             matrix:
-                node-version: [18.x]
+                node-version: [18]
 
         steps:
-            - uses: actions/checkout@v3
-            - name: Use Node.js ${{ matrix.node-version }}
-              uses: actions/setup-node@v3
-              with:
-                  node-version: ${{ matrix.node-version }}
-                  cache: 'yarn'
+          - uses: actions/checkout@v3
+          - name: Use Node.js ${{ matrix.node-version }}
+            uses: actions/setup-node@v3
+            with:
+              node-version: ${{ matrix.node-version }}
+              cache: 'yarn'
 
             - name: Install Dependencies
               run: yarn install --immutable --immutable-cache
