--- a/.github/workflows/templates-ci.yml
+++ b/.github/workflows/templates-ci.yml
@@ -29,18 +29,18 @@ jobs:
         runs-on: ubuntu-latest
         defaults:
             run:
-                working-directory: services/user
+                working-directory: _templates/**
         strategy:
             matrix:
                 node-version: [18]
 
         steps:
-          - uses: actions/checkout@v3
-          - name: Use Node.js ${{ matrix.node-version }}
-            uses: actions/setup-node@v3
-            with:
-              node-version: ${{ matrix.node-version }}
-              cache: 'yarn'
+            - uses: actions/checkout@v3
+            - name: Use Node.js ${{ matrix.node-version }}
+              uses: actions/setup-node@v3
+              with:
+                  node-version: ${{ matrix.node-version }}
+                  cache: 'yarn'
 
             - name: Install Dependencies
               run: yarn install --immutable --immutable-cache
