--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,16 +1,16 @@
+checksumBehavior: update
+
 nodeLinker: pnp
 
-yarnPath: .yarn/releases/yarn-3.6.0.cjs
-
-checksumBehavior: 'update'
-
 supportedArchitectures:
-    cpu:
-        - x64
-        - arm64
-    libc:
-        - glibc
-        - musl
-    os:
-        - darwin
-        - linux
+  cpu:
+    - x64
+    - arm64
+  libc:
+    - glibc
+    - musl
+  os:
+    - darwin
+    - linux
+
+yarnPath: .yarn/releases/yarn-3.6.0.cjs
