sb tailwind error 드디어 해결

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
             "./services/*",
             "./packages/*",
             "./clis/*",
-            "./_templates/*"
+            "./templates/*"
         ]
     },
     "devDependencies": {
