--- a/clis/template/.prettierrc
+++ b/clis/template/.prettierrc
@@ -1,7 +1,11 @@
 {
-  "overrides": [
-    {
-      "files": "../../.prettierrc"
-    }
-  ]
+    "printWidth": 80,
+    "tabWidth": 2,
+    "useTabs": false,
+    "semi": true,
+    "singleQuote": true,
+    "jsxBracketSameLine": true,
+    "bracketSpacing": true,
+    "trailingComma": "all",
+    "arrowParens": "always"
 }
