--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "mentos",
+    "name": "yarn-workspace-starter",
     "private": true,
     "packageManager": "yarn@3.6.0",
     "workspaces": {
@@ -16,16 +16,15 @@
         "pinst": ">=2",
         "prettier": "^2.8.8",
         "prettier-plugin-tailwindcss": "^0.3.0",
+        "shell-quote": "^1.8.1",
         "typescript": "^5.1.6"
-    },
-    "lint-staged": {
-        "{services,packages}/**/*.{js,ts,jsx,tsx}": "prettier --write"
     },
     "scripts": {
         "postinstall": "husky install",
         "prepublishOnly": "pinst --disable",
         "postpublish": "pinst --enable",
-        "new-package": "yarn workspace @cli/template start"
+        "new-package": "yarn workspace @cli/template start",
+        "g:lint-staged-files": "lint-staged --allow-empty"
     },
     "dependenciesMeta": {
         "@prisma/client@4.15.0": {
