--- a/templates/express/package.json
+++ b/templates/express/package.json
@@ -1,39 +1,39 @@
 {
-  "name": "@template/express",
-  "packageManager": "yarn@3.6.0",
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
-    "@types/cors": "^2.8.13",
-    "@types/express": "^4.17.17",
-    "@types/jsonwebtoken": "^9.0.2",
-    "@types/morgan": "^1.9.4",
-    "@types/multer": "^1.4.7",
-    "@types/node": "^20.2.3",
-    "nodemon": "^2.0.22",
-    "prisma": "^4.14.1",
-    "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.6"
-  },
-  "scripts": {
-    "build": "tsc",
-    "show:gui": "yarn dlx prisma studio",
-    "start": "NODE_ENV=production node dist/app.js",
-    "db:pull": "yarn pnpify prisma db pull",
-    "db:push": "yarn pnpify prisma db push",
-    "prisma:generate": "yarn pnpify prisma generate",
-    "dev": "nodemon --exec ts-node -r tsconfig-paths/register src/app.ts"
-  },
-  "dependencies": {
-    "@prisma/client": "^4.14.1",
-    "@yarnpkg/pnpify": "^4.0.0-rc.44",
-    "bcrypt": "^5.1.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "joi": "^17.9.2",
-    "jsonwebtoken": "^9.0.0",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1"
-  }
+    "name": "express-app-starter",
+    "packageManager": "yarn@3.6.1",
+    "dependencies": {
+        "@prisma/client": "4.16.2",
+        "@yarnpkg/pnpify": "^4.0.0-rc.48",
+        "bcrypt": "^5.1.0",
+        "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "joi": "^17.9.2",
+        "jsonwebtoken": "^9.0.0",
+        "multer": "^1.4.5-lts.1"
+    },
+    "devDependencies": {
+        "@types/bcrypt": "^5.0.0",
+        "@types/cors": "^2.8.13",
+        "@types/express": "^4.17.17",
+        "@types/joi": "^17.2.3",
+        "@types/jsonwebtoken": "^9.0.2",
+        "@types/morgan": "^1.9.4",
+        "@types/multer": "^1.4.7",
+        "morgan": "^1.10.0",
+        "nodemon": "^2.0.22",
+        "prisma": "4.16.2",
+        "ts-node": "^10.9.1",
+        "tsconfig-paths": "^4.2.0",
+        "typescript": "^5.1.6"
+    },
+    "scripts": {
+        "build": "tsc",
+        "show:gui": "yarn dlx prisma studio",
+        "start": "NODE_ENV=production node dist/app.js",
+        "db:pull": "yarn pnpify prisma db pull",
+        "db:push": "yarn pnpify prisma db push",
+        "prisma:generate": "yarn pnpify prisma generate",
+        "dev": "nodemon --exec ts-node -r tsconfig-paths/register src/app.ts"
+    }
 }
